--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,13 +4,18 @@
   <div class="header-footer-wrapper">
 
     <div class="footer-col-start">
-      Xu Group
+      <div class="screen"> Xu Group </div>
       {%- include social.html -%}
     </div>
 
-    <div class="footer-col-middle">
+    <div class="footer-col-middle screen">
       <a href="https://www.tamu.edu/" target="_blank">TAMU</a>
       <a href="https://physics.tamu.edu/" target="_blank">Physics & Astronomy</a>
+    </div>
+
+    <div class="footer-col-middle palm">
+      <a href="https://www.tamu.edu/" target="_blank">TAMU</a>
+      <a href="https://physics.tamu.edu/" target="_blank">PhysAstr</a>
     </div>
 
     <div class="footer-col-end">
