--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -1,3 +1,18 @@
+.screen {
+    display: block;
+  @include media-query($on-palm) {
+    display: none;
+  }
+}
+
+.palm {
+  display: none;
+  @include media-query($on-palm) {
+    display: block;
+  }
+}
+
+
 /**
  * Site header
  */
@@ -8,6 +23,7 @@
 
   // Positioning context for the mobile navigation icon
   position: absolute;
+  z-index: 99;
   width: 100%;
   background: rgba(0, 0, 0, 0.6); /* Black background with 0.5 opacity */
   box-shadow: 0 -2px 8px rgba(0,0,0,.09),0 4px 8px rgba(0,0,0,.06),0 1px 2px rgba(0,0,0,.3),0 2px 6px rgba(0,0,0,.15);
@@ -168,11 +184,13 @@
 .footer-col-end {
   margin-left: auto;
   align-items: center;
+  padding-left: 10px;
 }
 .footer-col-start {
   display: flex;
   align-items: center;
   text-wrap: nowrap;
+  padding-right: 10px;
 }
 .footer-col-middle {
   margin: auto;
