--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,9 @@
   <div class="header-footer-wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
+    <img src="/assets/imag/logo.png" width="80" height="50" style="margin: 5px; margin-right: 20px;">
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-
+    
     {%- if page_paths -%}
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
