--- a/_sass/minima/_theme.scss
+++ b/_sass/minima/_theme.scss
@@ -27,7 +27,7 @@ $sol-green:    #859900;  // 60 -20  65
   }
   
 @mixin dark-theme {
-  --background-color: #011826;
+  --background-color: #1e2c35;
   --text-color: #{$sol-base3};
   --brand-color: #{$sol-blue};
   --header-color: #{$sol-violet}
